--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "api_key = 'AIzaSyDAhLk0ilN-Npqi8BWJqqxVVAYhKECEqnU' "
+    "api_key = 'Your api key' "
    ]
   },
   {
